[tool.poetry]
name = "yamwf"
version = "0.1.0"
description = "Yet another micro web framework."
authors = ["Aleksei Panfilov"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
webob = "^1.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.8.1"
pygments = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
